# TrueGul

./: .env.example  .gitignore  README.md  SPEC.md  SPRINT_PLAN_V0.md  docker-compose.dev.yml  docker-compose.yml  package.json  tsconfig.json
.github/workflows/: build-push.yml  ci.yml  deploy.yml
.husky/: pre-commit
api-server/: .golangci.yml  Dockerfile  Makefile  go.mod  go.sum
api-server/cmd/migrate/: main.go
api-server/cmd/server/: main.go
api-server/internal/config/: config.go
api-server/internal/data/: user.go  writing.go
api-server/internal/database/: database.go
api-server/internal/dto/: request.go  response.go
api-server/internal/errors/: errors.go
api-server/internal/handler/: analysis.go  auth.go  error.go  health.go  writing.go
api-server/internal/middleware/: auth.go  csrf.go
api-server/internal/migrations/: embed.go
api-server/internal/model/: analysis.go  user.go  writing.go
api-server/internal/mq/: mq.go  redis.go
api-server/internal/repository/: analysis.go  user.go  writing.go
api-server/internal/service/: analysis.go  auth.go  writing.go
api-server/migrations/: 000001_init_schema.down.sql  000001_init_schema.up.sql  000002_add_analysis_task_columns.down.sql
frontend/: README.md  biome.json  package.json  pnpm-lock.yaml
frontend/src/: middleware.ts
frontend/src/app/: globals.css  page.tsx
frontend/src/stores/: analysis.ts  auth.ts  writings.ts
infra/: README.md
infra/environments/production/: main.tf  terraform.tfvars.example  variables.tf
infra/modules/ecr/: main.tf  outputs.tf
infra/modules/ecs/: main.tf  outputs.tf  variables.tf
infra/modules/elasticache/: main.tf  outputs.tf  variables.tf
infra/modules/rds/: main.tf  outputs.tf  variables.tf
infra/modules/s3/: main.tf  outputs.tf
infra/modules/vpc/: main.tf  (+2 more)
ml-server/: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
ml-server/app/: config.py  main.py
ml-server/app/common/: types.py
ml-server/app/model_adapter/: __init__.py  adapter.py
ml-server/app/model_loader/: __init__.py  base.py  creator.py  local.py  s3.py
ml-server/app/mq/: __init__.py  base.py  redis.py
ml-server/app/routes/: analyze.py
ml-server/app/schemas/: __init__.py  task.py
ml-server/app/services/: __init__.py  callback.py  consumer.py  detector.py  feedback.py
ml-server/data/: few_shot_examples.json
ml-server/models/: README.md
ml-server/prompts/: topik_scoring.md
ml-server/scripts/: test_llm_scoring.py
ml-server/tests/: test_main.py
mobile/linux/: CMakeLists.txt
sprints/: README.md  sprint-0.md  sprint-1.md  sprint-2.md  sprint-3.md  sprint-4.md  sprint-5.md
versions/: v1-ocr.md  v2-data-collection.md  v3-model-optimization.md  v4-expansion.md
(+30 files in other folders)
